[gd_scene load_steps=19 format=3 uid="uid://brib3w1lqtnsk"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_46mfs"]
[ext_resource type="Texture2D" uid="uid://cj0gv61kqy20g" path="res://sprites/MainMenu/Main Menu Background.png" id="2_hekra"]
[ext_resource type="Texture2D" uid="uid://bsmp5h4nadqjx" path="res://sprites/MainMenu/Intro red.png" id="3_swjf0"]
[ext_resource type="Texture2D" uid="uid://dfd4f72lt0up8" path="res://sprites/MainMenu/Moon Gem red.png" id="4_eomn2"]
[ext_resource type="Texture2D" uid="uid://pvxv6hptn2ku" path="res://sprites/MainMenu/Flowers Red.png" id="5_0id41"]
[ext_resource type="Texture2D" uid="uid://chcj277v4psxu" path="res://sprites/MainMenu/ReDecorate Red.png" id="6_tqqtp"]
[ext_resource type="Texture2D" uid="uid://bbx1tjtnyxh7s" path="res://sprites/MainMenu/Settings Red.png" id="7_mgsgi"]
[ext_resource type="Texture2D" uid="uid://m23x4eexultq" path="res://sprites/MainMenu/checkboxNo.PNG" id="8_r2skf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bm8kx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bk44"]
bg_color = Color(0, 0, 0, 0.486275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xu5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bul4w"]
bg_color = Color(0, 0, 0, 0.486275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n665p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7aj8w"]
bg_color = Color(0, 0, 0, 0.486275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbrek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0na4g"]
bg_color = Color(0, 0, 0, 0.486275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vb0g8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lok5q"]
bg_color = Color(0, 0, 0, 0.486275)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.003
offset_right = -3.0
offset_bottom = -0.160034
script = ExtResource("1_46mfs")

[node name="MainScene" type="Sprite2D" parent="."]
position = Vector2(641, 360)
texture = ExtResource("2_hekra")

[node name="Intro" type="Sprite2D" parent="MainScene"]
position = Vector2(-1, -16)
texture = ExtResource("3_swjf0")

[node name="IntroButton" type="Button" parent="MainScene/Intro"]
offset_left = -69.0
offset_top = -21.0
offset_right = 70.0
offset_bottom = 22.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bm8kx")
theme_override_styles/focus = SubResource("StyleBoxFlat_7bk44")

[node name="MoonGem" type="Sprite2D" parent="MainScene"]
position = Vector2(-1, 40)
texture = ExtResource("4_eomn2")

[node name="MoonGemButton" type="Button" parent="MainScene/MoonGem"]
offset_left = -69.0
offset_top = -21.0
offset_right = 70.0
offset_bottom = 22.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_8xu5l")
theme_override_styles/focus = SubResource("StyleBoxFlat_bul4w")

[node name="Flowers" type="Sprite2D" parent="MainScene"]
position = Vector2(-1, 96)
texture = ExtResource("5_0id41")

[node name="FlowerButton" type="Button" parent="MainScene/Flowers"]
offset_left = -69.0
offset_top = -21.0
offset_right = 70.0
offset_bottom = 22.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_n665p")
theme_override_styles/focus = SubResource("StyleBoxFlat_7aj8w")

[node name="Redecorate" type="Sprite2D" parent="MainScene"]
position = Vector2(-1, 152)
texture = ExtResource("6_tqqtp")

[node name="RedecorateButton" type="Button" parent="MainScene/Redecorate"]
offset_left = -69.0
offset_top = -21.0
offset_right = 70.0
offset_bottom = 22.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tbrek")
theme_override_styles/focus = SubResource("StyleBoxFlat_0na4g")

[node name="Settings" type="Sprite2D" parent="MainScene"]
position = Vector2(-1, 208)
texture = ExtResource("7_mgsgi")

[node name="SettingsButton" type="Button" parent="MainScene/Settings"]
offset_left = -69.0
offset_top = -21.0
offset_right = 70.0
offset_bottom = 22.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vb0g8")
theme_override_styles/focus = SubResource("StyleBoxFlat_lok5q")

[node name="MoonGemCheckbox" type="Sprite2D" parent="."]
position = Vector2(528, 400)
texture = ExtResource("8_r2skf")

[node name="FlowerCheckbox" type="Sprite2D" parent="."]
position = Vector2(528, 456)
texture = ExtResource("8_r2skf")

[node name="RedecorateCheckbox" type="Sprite2D" parent="."]
position = Vector2(528, 512)
texture = ExtResource("8_r2skf")

[connection signal="pressed" from="MainScene/Intro/IntroButton" to="." method="_on_intro_button_pressed"]
[connection signal="pressed" from="MainScene/MoonGem/MoonGemButton" to="." method="_on_moon_gem_button_pressed"]
[connection signal="pressed" from="MainScene/Flowers/FlowerButton" to="." method="_on_flower_button_pressed"]
[connection signal="pressed" from="MainScene/Redecorate/RedecorateButton" to="." method="_on_redecorate_button_pressed"]
[connection signal="pressed" from="MainScene/Settings/SettingsButton" to="." method="_on_settings_button_pressed"]
